1.18.2-0.9.0.5

- Added compressed iron bee (pneumaticcraft)
- Fixed Fluix bee,
- Fixed bottler recipes
- Fixed a concurrency issue sometimes preventing load (thanks to Quinteger)
- Added Pepto Beesmol (blame Shiny)


1.18.2-0.9.0.4

-- Fix bee tag conditions not working


1.18.2-0.9.0.2

-- Updated to Forge 40.0.34


1.18.2-0.9.0.1

-- Updated to Forge 40.0.18


1.18.2-0.9.0.0

-- Ported to 1.18.2


0.8.0.8

-- Fixed Lumber and Quarry bees only being able to produce from Feeding Slabs
-- Fixed shearing from dispensers causing crash
-- Fixed Quarry bees showing Lumber bees output in JEI
-- Fixed temper attribute picking the worst for offspring
-- Minor performance improvements


0.8.0.7

-- Added a bee nest helmet, it's all the buzz
-- Chips from Lumber and Quarry bees now show properly in JEI
-- Fixed bees duplicating
-- Added desh, ostrum and calorite bees (Beyond Earth)
-- Added support for new JEI API
-- Fixed and balanced some mixing recipes


0.8.0.6

-- Updated Russian translations, thanks to DrHesperus
-- Farmer and Collector/Hoarder Bees now operate in an area around their home hive instead of themselves
-- Hives can now hold range upgrades which extend the operating area of Farmer and Collector/Hoarder Bees
-- ATM bees have been rebalanced
-- Releasing a bee on a flower block or a hive now correctly associates the bee with that location
-- Block conversion recipes now uses fuzzy match when checking a blockstate, fixing anvil repairing not working
-- Fixed milky comb output
-- Fixed AE2 spatial bee comb output
-- Fixed ars nouveau bee
-- Remove obsidian from Draconic bee flowers
-- Fixed problems when Electrodynamics is installed


0.8.0.5

-- Fixed nocturnal bees not working at night
-- Fixed weather tolerant bees not working in bad weather
-- Fixed crash with honey fluid in feeding slabs
-- Fixed crash when hitting an expansion box with a stick
-- Added better support for FTB Quests