@@ -133,13 +133,13 @@ dependencies {
 //    implementation fg.deobf("curse.maven:citadel-331936:3584733")
 //    implementation fg.deobf("curse.maven:alexs-mobs-426558:3603683")
 //    implementation fg.deobf("curse.maven:item-filters-forge-309674:3596362")
-//    implementation fg.deobf("curse.maven:architectury-forge-419699:3636540")
+    implementation fg.deobf("curse.maven:architectury-forge-419699:3807924")
 //    implementation fg.deobf("curse.maven:ftb-teams-forge-404468:3596307")
 //    implementation fg.deobf("curse.maven:ftb-library-forge-404465:3598890")
 //    implementation fg.deobf("curse.maven:ftb-quests-forge-289412:3596442")
 //    implementation fg.deobf("curse.maven:ftb-chunks-forge-314906:3601595")
 //    implementation fg.deobf("curse.maven:curios-309927:3613028")
-//    implementation fg.deobf("curse.maven:geckolib-388172:3611877")
+    implementation fg.deobf("curse.maven:ftb-industrial-contraptions-forge-539097:3807215")
     implementation fg.deobf("curse.maven:pneumaticcraft-repressurized-281849:3815728")
     implementation fg.deobf("curse.maven:cofh-core-69162:3803484")
     implementation fg.deobf("curse.maven:thermal-foundation-222880:3803495")
