@@ -240,6 +240,7 @@
   "entity.productivebees.insanium_bee": "Insanium Bee",
   "entity.productivebees.invar_bee": "Invar Bee",
   "entity.productivebees.iolite_bee": "Iolite Bee",
+  "entity.productivebees.iridium_bee": "Iridium Bee",
   "entity.productivebees.iron_bee": "Iron Bee",
   "entity.productivebees.jade_bee": "Jade Bee",
   "entity.productivebees.jasper_bee": "Jasper Bee",
