@@ -1,0 +1,42 @@
+{
+    "type": "productivebees:centrifuge",
+    "ingredient": {
+        "type": "forge:nbt",
+        "item": "productivebees:configurable_honeycomb",
+        "nbt": {
+            "EntityTag": {
+                "type": "productivebees:iridium"
+            }
+        }
+    },
+    "outputs": [
+        {
+            "item": {
+                "tag": "forge:nuggets/iridium"
+            },
+            "min": 1,
+            "max": 3,
+            "chance": 70
+        },
+        {
+            "item": {
+                "tag": "forge:wax"
+            }
+        },
+        {
+            "fluid": {
+                "fluid": "productivebees:honey"
+            },
+            "amount": 50
+        }
+    ],
+    "conditions": [
+        {
+            "type": "forge:not",
+            "value": {
+                "type": "forge:tag_empty",
+                "tag": "forge:nuggets/iridium"
+            }
+        }
+    ]
+}
