@@ -1,10 +1,11 @@
 1.18.2-0.9.0.5
 
 - Added compressed iron bee (pneumaticcraft)
+- Added iridium bee
+- Added Pepto Beesmol (blame Shiny)
 - Fixed Fluix bee,
 - Fixed bottler recipes
 - Fixed a concurrency issue sometimes preventing load (thanks to Quinteger)
-- Added Pepto Beesmol (blame Shiny)
 
 
 1.18.2-0.9.0.4
